--- a/zc/rust-poc/throttle-zc/Cargo.toml
+++ b/zc/rust-poc/throttle-zc/Cargo.toml
@@ -29,8 +29,9 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 
 [dependencies]
 log = { version = "0.4", default-features = false }
-esp-idf-svc = { version = "0.49", default-features = false }
+esp-idf-svc = { version = "0.49.1", default-features = false }
 esp-idf-sys = { version ="0.35.0" }
+mcp4728 = "0.1.0"
 anyhow = "1.0.86"
 
 [build-dependencies]
