--- a/zc/rust-poc/throttle-zc/Cargo.toml
+++ b/zc/rust-poc/throttle-zc/Cargo.toml
@@ -36,3 +36,6 @@ anyhow = "1.0.86"
 
 [build-dependencies]
 embuild = "0.32.0"
+
+[[package.metadata.esp-idf-sys.extra_components]]
+remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }
