--- a/zc/rust-poc/throttle-zc/Cargo.toml
+++ b/zc/rust-poc/throttle-zc/Cargo.toml
@@ -33,9 +33,10 @@ esp-idf-svc = { version = "0.49.1", default-features = false }
 esp-idf-sys = { version ="0.35.0" }
 mcp4728 = "0.1.0"
 anyhow = "1.0.86"
+crossbeam-channel = "0.5.13"
 
 [build-dependencies]
 embuild = "0.32.0"
 
 [[package.metadata.esp-idf-sys.extra_components]]
-remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }
+remote_component = { name = "espressif/esp_websocket_client", version = "1.2.3" }
